samples/_failures_safe/1761404715_398d44_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ebb53756.c: In function ‘main’:
./samples/SAFE/__tmp_ebb53756.c:165:5: error: expected declaration or statement at end of input
  165 |     }
      |     ^
